deploy/kubernetes/ApiService.yaml
# api-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-api-service
  template:
    metadata:
      labels:
        app: app-api-service
    spec:
      containers:
      - name: app-api-service
        image: api-service:1.0.0
        ports:
        - containerPort: 8080
---
# Service(ApiService)
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: app-api-service
