deploy/kubernetes/Ingress.yaml
# Service(Ingress)
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microservice-sample-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 18080
      - path: /api
        backend:
          serviceName: api-service
          servicePort: 8080
